@@ -1,3 +1,8 @@
+2017-06-23  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* dvibook.c, dviconcat.c, dviselect.c, dvitodvi.c, error.h:
+	Allow Unicode file names. (Windows only)
+
 2017-06-18  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
 	* dvibook.c, dviclass.[ch], dvicodes.h, dviconcat.c,
